--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.13"
 dependencies = [
     "datetime-utils @ git+https://github.com/puntonim/utils-monorepo#subdirectory=datetime-utils",
     "settings-utils @ git+https://github.com/puntonim/utils-monorepo#subdirectory=settings-utils",
+    "pydantic-utils @ git+https://github.com/puntonim/utils-monorepo#subdirectory=pydantic-utils",
     "fastapi[standard] (>=0.115.12,<0.116.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
 ]
